--- a/TAREAS - JORGE MATIAS OTT/style.css
+++ b/TAREAS - JORGE MATIAS OTT/style.css
@@ -47,7 +47,7 @@ h1 {
 }
 
 nav {
-  background-color: black;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -290,4 +290,109 @@ button{
 
 .permissionToPlay{
   font-size: 12px;
+}
+
+@media (min-width: 993px){
+  body{
+    background-color: red;
+  }
+}
+
+
+@media (min-width: 551px) and (max-width: 992px) { 
+  
+  
+}
+
+@media (max-width: 550px){ 
+  .logo {
+    width: 100px;
+    position: absolute;
+    left: 40%;
+    top: 250px;
+    background-color: transparent;
+  }
+  
+  nav {
+    position: absolute;
+    top: 300px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  nav a {
+    display: block;
+    font-size: 7px;
+    width: 40%;
+    margin: 12px;
+  }
+
+  h1{
+    font-size: 25px;
+  }
+
+  h2{
+    font-size: 20px;
+    margin-top: 60px;
+  }
+
+  h3{
+    font-size: 15px;
+    text-align: center;
+  }
+
+  h4{
+    font-size: 14px;
+  }
+  
+  p{
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .contenedor-principal{
+    width: 80%;
+  }
+
+  .distribucion{
+    justify-content: center;
+  }
+
+  footer{
+    text-align: center;  
+  }
+
+  .footer{
+    font-size: 10px;
+    
+  }
+
+  .parrafoContact{
+    width: 100%;
+    font-size:10px;
+  }
+
+  li{
+    font-size:12px;
+  }
+
+  table{
+    align-items: center;
+  }
+
+  td, tr,dd, dl{
+    font-size:12px;
+  }
+
+  label, input, button{
+    font-size:12px;
+  }
+
+  .spaninput{
+    width: 200px;
+  }
+  
+  
 }
